2013-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Benjamin Kerensa
	* oldrecover-src/extract_list.c: Typo.

2013-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Process.pm: Use Amanda::Debug.

2013-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Add SESSION-TOKEN property.
	* device-src/s3.h (s3_open): Add session_token argument.
	* device-src/s3-device.c: Add SESSION-TOKEN property.
	* man/xml-source/amanda-devices.7.xml: Document the new property.

2013-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix parsing of config override.

2013-09-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Amflush.pm: Fix.
	* perl/Amanda/Cmdfile.swg: Fix for newer swig.
	* server-src/cmdfile.c: Cleanup.

2013-09-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Amflush.pm: Perl module with amflush functionnality.
	* perl/Amanda/JSON/Amflush.pm: New JSON module for running a flush.
	* perl/Amanda/Message.pm: Add Amanda::Amflush::Message.
	* perl/Makefile.am: Add Amanda/Amflush.pm, Amanda/JSON/Amflush.pm
	* server-src/amflush.c: Remove.
	* server-src/amflush.pl: New amflush programthat use the perl module.
	* server-src/Makefile.am: Add amflush perl script.
	* server-src/amanda.psgi.pl: Register Amanda::JSON::Amflush::run.

2013-09-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Amdump.pm: Add message code 2000002.
	* perl/Amanda/Config.swg: Add message code 1500002.
	* perl/Amanda/JSON/Amdump.pm: Use message code 2000002.
	* perl/Amanda/JSON/Config.pm: Use message code 1500002.
	* perl/Amanda/Message.pm: Fix documentation.

2013-09-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Disklist.swg: Fix.

2013-09-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Cmdfile.swg: Fix.

2013-09-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/amglue/integers.swg: Add pid_t.

2013-09-12  Jean-Louis Martineau <martineau@zmanda.com>