@@ -1,4 +1,7 @@
 2013-10-15  Jean-Louis Martineau <martineau@zmanda.com>
+	* installcheck/gnutar.pl: Fix for fc19.
+
+2013-10-15  Jean-Louis Martineau <martineau@zmanda.com>
 	Patch by Benjamin Kerensa
 	* oldrecover-src/extract_list.c: Typo.
 
